--- a/index.html
+++ b/index.html
@@ -46,29 +46,29 @@
             </section>
             <section>
                 <div class="row bg-white m-0 align-items-center">
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-md-6 col-xs-12 p-5">
                         <h3>Easy to use</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptates nam odio vel tempora amet beatae molestiae? Accusamus provident voluptas sunt commodi deserunt suscipit consequuntur perspiciatis delectus nam, numquam facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique eligendi. Neque fugiat ut ad ea. Eius aut odit, at, iure quam similique nulla animi possimus non incidunt accusantium cupiditate?
                         </p>
                     </div>
                     <div class="col-md-6 col-xs-12 m-0 p-0">
-                        <figure class="m-0"><img src="https://picsum.photos/500?image=0" alt="computer" class="img-fluid float-right"></figure>
+                        <figure class="m-0"><img src="https://picsum.photos/600?image=0" alt="computer" class="img-fluid float-right"></figure>
                     </div>
                     <div class="col-md-6 col-xs-12 m-0 p-0">
-                        <figure class="m-0"><img src="https://picsum.photos/500?image=816" alt="phone" class="img-fluid float-left"></figure>
+                        <figure class="m-0"><img src="https://picsum.photos/600?image=816" alt="phone" class="img-fluid float-left"></figure>
                     </div>
-                    <div class="col-md-6 col-xs-12 m-0">
+                    <div class="col-md-6 col-xs-12 m-0 p-5">
                         <h3>Updated For<br>Bootstrap 4</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptates nam odio vel tempora amet beatae molestiae? Accusamus provident voluptas sunt commodi deserunt suscipit consequuntur perspiciatis delectus nam, numquam facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique eligendi. Neque fugiat ut ad ea. Eius aut odit, at, iure quam similique nulla animi possimus non incidunt accusantium cupiditate?
                         </p>
                     </div>
-                    <div class="col-md-6 col-xs-12 m-0">
+                    <div class="col-md-6 col-xs-12 m-0 p-5">
                         <h3>Full Responsive<br>Design</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptates nam odio vel tempora amet beatae molestiae? Accusamus provident voluptas sunt commodi deserunt suscipit consequuntur perspiciatis delectus nam, numquam facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique eligendi. Neque fugiat ut ad ea. Eius aut odit, at, iure quam similique nulla animi possimus non incidunt accusantium cupiditate?
                         </p>
                     </div>
                     <div class="col-md-6 col-xs-12 m-0 p-0">
-                        <figure class="m-0"><img src="https://picsum.photos/500?image=668" alt="customize" class="img-fluid float-right"></figure>
+                        <figure class="m-0"><img src="https://picsum.photos/600?image=668" alt="customize" class="img-fluid float-right"></figure>
                     </div>
                 </div>
             </section>
