--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@
                         </p>
                     </div>
                     <div class="col-md-6 col-xs-12 m-0 p-0">
-                        <figure class="m-0"><img src="https://picsum.photos/600?image=0" alt="computer" class="img-fluid float-right"></figure>
+                        <figure class="m-0"><img src="https://picsum.photos/600?image=0" alt="computer" class="img-fluid"></figure>
                     </div>
-                    <div class="col-md-6 col-xs-12 m-0 p-0">
-                        <figure class="m-0"><img src="https://picsum.photos/600?image=816" alt="phone" class="img-fluid float-left"></figure>
-                    </div>
-                    <div class="col-md-6 col-xs-12 m-0 p-5">
-                        <h3>Updated For<br>Bootstrap 4</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptates nam odio vel tempora amet beatae molestiae? Accusamus provident voluptas sunt commodi deserunt suscipit consequuntur perspiciatis delectus nam, numquam facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique eligendi. Neque fugiat ut ad ea. Eius aut odit, at, iure quam similique nulla animi possimus non incidunt accusantium cupiditate?
-                        </p>
+                    <div class="d-md-inline-flex flex-md-row-reverse col-md-12 col-xs-12 p-0 align-items-center">
+                        <div class="col-md-6 col-xs-12 m-0 p-5">
+                            <h3>Updated For<br>Bootstrap 4</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptates nam odio vel tempora amet beatae molestiae? Accusamus provident voluptas sunt commodi deserunt suscipit consequuntur perspiciatis delectus nam, numquam facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, similique eligendi. Neque fugiat ut ad ea. Eius aut odit, at, iure quam similique nulla animi possimus non incidunt accusantium cupiditate?
+                            </p>
+                        </div>
+                        <div class="col-md-6 col-xs-12 m-0 p-0">
+                            <figure class="m-0"><img src="https://picsum.photos/600?image=816" alt="phone" class="img-fluid"></figure>
+                        </div>
                     </div>
                     <div class="col-md-6 col-xs-12 m-0 p-5">
                         <h3>Full Responsive<br>Design</h3>
@@ -68,7 +70,7 @@
                         </p>
                     </div>
                     <div class="col-md-6 col-xs-12 m-0 p-0">
-                        <figure class="m-0"><img src="https://picsum.photos/600?image=668" alt="customize" class="img-fluid float-right"></figure>
+                        <figure class="m-0"><img src="https://picsum.photos/600?image=668" alt="customize" class="img-fluid"></figure>
                     </div>
                 </div>
             </section>
